navigate GET: disabling CH only required if more than 2 points